--- a/frontend/html/date.html
+++ b/frontend/html/date.html
@@ -22,9 +22,9 @@
   </body>
   <script>
     function date(str) {
-      let date = new Date();  
+      let date = new Date();
       return new Date(
-        str === "prev" ? date.getFullYear() - 1 : date.getFullYear() + 1,
+        str === 'prev' ? date.getFullYear() - 1 : date.getFullYear() + 1,
         date.getMonth() + 1,
         date.getDate(),
         date.getHours(),
