--- a/frontend/html/event-delegation.html
+++ b/frontend/html/event-delegation.html
@@ -24,15 +24,15 @@
       }
 
       save() {
-        alert("saveing");
+        alert('saveing');
       }
 
       load() {
-        alert("loading");
+        alert('loading');
       }
 
       search() {
-        alert("searching");
+        alert('searching');
       }
 
       onClick() {
