--- a/frontend/html/files.html
+++ b/frontend/html/files.html
@@ -14,8 +14,8 @@
   </body>
   <script>
     window.onload = function () {
-      var input = document.getElementById("file");
-      input.addEventListener("change", function (event) {
+      var input = document.getElementById('file');
+      input.addEventListener('change', function (event) {
         console.log(event.target.tagName);
         var arrfile = this.files;
         for (let i = 0; i < arrfile.length; i++) {
