--- a/frontend/html/flex-direction.html
+++ b/frontend/html/flex-direction.html
@@ -95,8 +95,7 @@
               World》群星为公益而唱的模式，来呼应世界和平年的主题。
               于是，罗大佑、张艾嘉等台湾歌手共同创作了这首歌曲，并出面召集了中国台湾、香港、新加坡以及马来西亚等地共60位华人歌手共同演唱。
               这些歌手跨越不同地域、不同唱片公司，打破了签约限制，其中有李宗盛、蔡琴、苏芮、潘越云等歌手和艺人。
-              罗大佑等发起人还邀请到了飞碟、滚石、宝丽金等公司
-              参与了单曲专辑的制作
+              罗大佑等发起人还邀请到了飞碟、滚石、宝丽金等公司 参与了单曲专辑的制作
             </p>
             <p>
               该曲通过用平和而热切的音调，表达了人们祈求和平、期待明天会更好的美好心愿
@@ -108,19 +107,12 @@
             <p>
               我颠颠又炒炒 放点辣椒 有万种的调料 付之一勺 我一下低 我一下高
               做出最辣的菜肴 锅里乾坤我最知道 江湖中闯名号 老陈来掌勺 千斤的锅铲
-              我一手挑 不怕喷也不逃跑 对顾客我肯弯腰 川菜中味道最好 莫说咸
-              因为盐价太高 莫笑菜 为博你一笑 莫怕辣 米饭绝对管饱
-              又咸又菜又辣趁热吃好
+              我一手挑 不怕喷也不逃跑 对顾客我肯弯腰 川菜中味道最好 莫说咸 因为盐价太高
+              莫笑菜 为博你一笑 莫怕辣 米饭绝对管饱 又咸又菜又辣趁热吃好
             </p>
-            <p>
-              小时候没认真听过，现在来听倒是很羡慕这种洒脱和超脱的人生态度
-            </p>
-            <p>
-              好歌！只有中国文化的土壤上才能产生出这种歌！
-            </p>
-            <p>
-              是不是有人跟我一样，童年=林正英+成龙+洪金宝+李连杰+周星驰？
-            </p>
+            <p>小时候没认真听过，现在来听倒是很羡慕这种洒脱和超脱的人生态度</p>
+            <p>好歌！只有中国文化的土壤上才能产生出这种歌！</p>
+            <p>是不是有人跟我一样，童年=林正英+成龙+洪金宝+李连杰+周星驰？</p>
             <p>
               你要搞清楚是你喜欢对方，不是对方喜欢你，你既然主动了，就算受天大的委屈，都应该是你意料之中的事，怪不了任何人，有勇气追求喜欢，就要有勇气接受眼泪，结果都是自己承担，谁叫你有本事喜欢人家，没本事让人家喜欢自己。
             </p>
