--- a/frontend/html/linear-gradient.html
+++ b/frontend/html/linear-gradient.html
@@ -24,18 +24,10 @@
         );
       }
       .l-g-2 {
-        background: linear-gradient(
-          to right bottom,
-          rgb(65, 0, 185),
-          rgb(0, 198, 255)
-        );
+        background: linear-gradient(to right bottom, rgb(65, 0, 185), rgb(0, 198, 255));
       }
       .l-g-3 {
-        background: linear-gradient(
-          to right bottom,
-          rgb(4, 8, 69),
-          rgb(47, 77, 150)
-        );
+        background: linear-gradient(to right bottom, rgb(4, 8, 69), rgb(47, 77, 150));
       }
     </style>
   </head>
