--- a/frontend/html/object-fit.html
+++ b/frontend/html/object-fit.html
@@ -24,16 +24,10 @@
     <div class="page">
       <div class="page-bd">
         <div class="pic">
-          <img
-            src="http://pic01.bdatu.com/Upload/appsimg/1584353846.jpg"
-            alt=""
-          />
+          <img src="http://pic01.bdatu.com/Upload/appsimg/1584353846.jpg" alt="" />
         </div>
         <div class="pic">
-          <img
-            src="http://pic01.bdatu.com/Upload/appsimg/1584352774.jpg"
-            alt=""
-          />
+          <img src="http://pic01.bdatu.com/Upload/appsimg/1584352774.jpg" alt="" />
         </div>
       </div>
     </div>
