--- a/frontend/html/input.search.html
+++ b/frontend/html/input.search.html
@@ -10,7 +10,14 @@
       <div class="page-hd">
         <form action="" class="form">
           <div class="form-item">
-            <input type="search" class="input" value="" autocomplete="off" placeholder="搜索公会名称/ID" maxlength="15">
+            <input
+              type="search"
+              class="input"
+              value=""
+              autocomplete="off"
+              placeholder="搜索公会名称/ID"
+              maxlength="15"
+            />
           </div>
         </form>
       </div>
