--- a/frontend/html/progress.html
+++ b/frontend/html/progress.html
@@ -47,7 +47,7 @@
     <div class="page">
       <div class="page-bd">
         <!-- 满值为100% -->
-        <div class="progress" style="--percent: 55;"></div>
+        <div class="progress" style="--percent: 55"></div>
       </div>
     </div>
   </body>
