--- a/frontend/html/textarea-auto-height.html
+++ b/frontend/html/textarea-auto-height.html
@@ -14,15 +14,12 @@
     </div>
   </body>
   <script>
-    document.querySelectorAll("textarea").forEach((el) => {
-      el.style.height = el.setAttribute(
-        "style",
-        "height: " + el.scrollHeight + "px"
-      );
-      el.classList.add("auto");
-      el.addEventListener("input", (e) => {
-        el.style.height = "auto";
-        el.style.height = el.scrollHeight + "px";
+    document.querySelectorAll('textarea').forEach((el) => {
+      el.style.height = el.setAttribute('style', 'height: ' + el.scrollHeight + 'px');
+      el.classList.add('auto');
+      el.addEventListener('input', (e) => {
+        el.style.height = 'auto';
+        el.style.height = el.scrollHeight + 'px';
       });
     });
   </script>
