--- a/frontend/html/width-or-height.html
+++ b/frontend/html/width-or-height.html
@@ -4,39 +4,39 @@
     <meta charset="UTF-8" />
     <title>Document</title>
     <script type="text/javascript">
-      var special = document.querySelectorAll("p.warning, p.note");
+      var special = document.querySelectorAll('p.warning, p.note');
 
-      var el = document.querySelector("#main, #baseic, #excclamation");
+      var el = document.querySelector('#main, #baseic, #excclamation');
 
       function init() {
         var arrImages = new Array(3);
 
-        arrImages[0] = document.getElementById("image1");
-        arrImages[1] = document.getElementById("image2");
-        arrImages[2] = document.getElementById("image3");
+        arrImages[0] = document.getElementById('image1');
+        arrImages[1] = document.getElementById('image2');
+        arrImages[2] = document.getElementById('image3');
 
         console.log(arrImages);
 
-        var objOutput = document.getElementById("output");
+        var objOutput = document.getElementById('output');
 
-        var strHtml = "<ul>";
+        var strHtml = '<ul>';
 
         for (var i = 0; i < arrImages.length; i++) {
           strHtml +=
-            "<li>image" +
+            '<li>image' +
             (i + 1) +
-            ": height=" +
+            ': height=' +
             arrImages[i].height +
-            ", width=" +
+            ', width=' +
             arrImages[i].width +
-            ", style.height=" +
+            ', style.height=' +
             arrImages[i].style.height +
-            ", style.width=" +
+            ', style.width=' +
             arrImages[i].style.width +
-            "</li>";
+            '</li>';
         }
 
-        strHtml += "</ul>";
+        strHtml += '</ul>';
 
         objOutput.innerHTML = strHtml;
       }
