--- a/frontend/vue/v3/tree.html
+++ b/frontend/vue/v3/tree.html
@@ -30,8 +30,7 @@
     </style>
   </head>
   <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
   </body>
   <script src="https://unpkg.com/vue@3.2.36/dist/vue.global.prod.js"></script>
   <script>
