--- a/frontend/html/custom-range-slider/index.html
+++ b/frontend/html/custom-range-slider/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div class="page">
+      <div id="box" style="transform: rotate(45deg);"></div>
       <p>Custom Range Slider <span id="value"></span></p>
       <div class="range-container">
         <input type="range" id="range" value="10" min="0" max="100" />
